# fullstack-project

./: README.md  requirements.txt
djangoTC/: pyvenv.cfg
full_stack_base/: README.md
full_stack_base/intsureview_be/: README.md  manage.py  pyproject.toml
full_stack_base/intsureview_be/intsureview_be/: asgi.py  urls.py
full_stack_base/intsureview_be/intsureview_be/apps/api/: views.py
intsureview_be/: README.md  db.sqlite3  pyproject.toml
intsureview_be/djangoTC/: pyvenv.cfg
intsureview_be/intsureview-be--sJc6UhS-py3.11/: pyvenv.cfg
intsureview_be/intsureview_be/: asgi.py  settings.py  urls.py  wsgi.py
intsureview_be/intsureview_be/apps/api/: admin.py  models.py  serializers.py  views.py
intsureview_be/intsureview_be/apps/api/migrations/: 0001_initial.py  0002_alter_workout_date.py  0003_alter_workout_date.py  0004_alter_workout_date.py  0005_alter_workout_completed_alter_workout_location_and_more.py  0006_alter_workout_id.py
intsureview_fe/: package-lock.json  package.json
intsureview_fe/public/: index.html
intsureview_fe/src/: App.css  App.js
intsureview_fe/src/components/: AddWorkout.jsx  Footer.jsx  Header.jsx  Home.jsx  UpdateWorkout.jsx  WorkoutDetail.jsx  WorkoutForm.jsx  Workouts.jsx
intsureview_fe/src/views/: Main.jsx
